--- a/index.html
+++ b/index.html
@@ -54,17 +54,27 @@
         </div>
       </div>
     </div>
-    <h1>Below is a form where you can enter your birthdates and your gender:</h1>
+            <h3><strong>Below is a form where you can enter your birthdates and your gender:</strong><h3>
+    <div id="form">
+      <div id="gender">
     <form>
       <label for="dateofbirth">Date of birth:</label><br>
       <input type="number" id="dateofbirth" name="dateofbirth" value=><br>
       <label for="month">Month:</label><br>
       <input type="text" id="month" name="month" value="">
+      <br><br>
       <label for="Year">Year:</label><br>
       <input type="number" id="Year" name="year" value="">
+      <br>
+      <h4>Gender:</h4>
+      <br>
+      <input type="radio" id="male" name="gender" value="male">
+      <label for="male">Male</label><br> 
+      <input type="radio" id="female" name="gender" value="female">
+      <label for="female">Female</label><br>
+      </div>
     </form>
-    
-
+    </div>
   </div>
 </body>
 </html>
