--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-</p>html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +54,7 @@
     </div>
             <h3><strong>Below is a form where you can enter your birthdates and your gender:</strong><h3>
     <div id="form">
-      <div id="gender">
+      <div id="frmgender">
     <form>
       <input type="number" id="DOB" placeholder="day">
     <br>
