--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p>This is a webpage that allows users to enter their birthdates,their gender and once submit is clicked,the Akan name
     is displayed.
     Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day
-    name' which corresponds to the day in the week they were born. Here are Ghanian day names for both male and female:
+    name which corresponds to the day in the week they were born. Here are Ghanian day names for both male and female:
     <div class="col-md-4">
       <div class="card">
         <div class="card-body">
