--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1>AKAN NAME WEBAPP</h1>
+      <h1>AKAN NAME WEB APPLICATION</h1>
     </div>
   </div>
   <p>This is a webpage that allows users to enter their birthdates,their gender and once submit is clicked,the Akan name
