--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>AKAN NAME WEB APPLICATION</h1>
     </div>
   </div>
-  <p>This is a webpage that allows users to enter their birthdates,their gender and once submit is clicked,the Akan name
+  <p>This is a webpage that allows users to enter their birthdates,their gender and once click me button is clicked,the Akan name
     is displayed.
     Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day
     name which corresponds to the day in the week they were born. Here are Ghanian day names for both male and female:
