--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <p>This is a webpage that allows users to enter their birthdates,their gender and once click me button is clicked,the Akan name
     is displayed on a page.
-    Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day
+    Akan names are derived from ghanian culture. Frequently in Ghana, children are given their first name as a 'day
     name which corresponds to the day in the week they were born. Here are Ghanian day names for both male and female:
     <div class="col-md-4">
       <div class="card">
